--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "publish": "shower publish"
   },
   "dependencies": {
+    "@shower/cli": "^0.3.1",
     "@shower/core": "3.3.0",
     "@shower/ribbon": "3.5.1"
   }
